--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,6 +18,7 @@
   <body>
     <nav id="navbar">
       <ul>
+        <li><a href="/">Home</a></li>
         <li><a href="/cars/allCars">Ver Carros</a></li>
         <li><a href="/cars/add">Novo Carro</a></li>
       </ul>
