--- a/views/cars/carform.handlebars
+++ b/views/cars/carform.handlebars
@@ -1,13 +1,13 @@
 <h1>Adicionar Carro</h1>
 <form action="/cars/add" method="post">
   <div>
-    <input type="text" name="nome" placeholder="Nome:">
-    <input type="text" name="modelo" placeholder="Modelo:">
-    <input type="text" name="motor" placeholder="Motor:">
+    <input type="text" name="nome" placeholder="Nome:"><br>
+    <input type="text" name="modelo" placeholder="Modelo:"><br>
+    <input type="text" name="motor" placeholder="Motor:"><br>
     <input type="text" name="ano" placeholder="Ano:"><br>
-    <input type="text" name="fab" placeholder="Fab.:">
-    <input type="text" name="vlr" placeholder="Vlr.:">
-    <input type="text" name="cor" placeholder="Cor:">
+    <input type="text" name="fab" placeholder="Fab.:"><br>
+    <input type="text" name="vlr" placeholder="Vlr.:"><br>
+    <input type="text" name="cor" placeholder="Cor:"><br>
     <input type="text" name="opc" placeholder="Opicional:">
 <br><br>
     <input type="submit" value="Cadastrar" />
