--- a/views/cars/viewcar.handlebars
+++ b/views/cars/viewcar.handlebars
@@ -1,7 +1,6 @@
-<h3>Todos os Carros</h3>
+<h1>Todos os Carros</h1>
 
-
-<ul class="cars_list list-group">
+<ul class="car_list list-group">
   {{#each cars}}
 
     <li class="list-group-item">
@@ -46,7 +45,3 @@
 
   {{/each}}
 </ul>
-
-
-
-</div>
